Resolvido problema com contagem de clã